--- a/example/public/index.html
+++ b/example/public/index.html
@@ -69,7 +69,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <label class="sr-only" for="input-card">Card number</label>
+                                <label class="sr-only" for="input-card">Credit Card Number</label>
                                 <div class="input-group">
                                     <div class="input-group-addon-icon input-group-addon"><span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span></div>
                                     <input type="tel" class="form-control" id="input-card" autocomplete="cc-number" x-autocompletetype="cc-number" placeholder="" pattern="\d*" name="cardNumber" value="" data-hipay-id="card-number" data-hipay-tabable="true">
