--- a/example/public/index_without_jquery.html
+++ b/example/public/index_without_jquery.html
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
 
-                <label class="sr-only" for="input-card">Card number</label>
+                <label class="sr-only" for="input-card">Credit Card Number</label>
                 <div class="input-group">
                     <div class="input-group-addon-icon input-group-addon"><span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span></div>
                     <input type="tel" class="form-control" id="input-card" autocomplete="cc-number" x-autocompletetype="cc-number" placeholder="" pattern="\d*" name="cardNumber" value="" data-hipay-id="card-number" data-hipay-tabable="true">
