--- a/example/public/index_without_jquery.html
+++ b/example/public/index_without_jquery.html
@@ -17,7 +17,7 @@
     <script src="./lib/vendor/node_modules/lt-ie-9/lt-ie-9.min.js"></script>
     <link href="../assets/old_bws.css" media="screen" rel="stylesheet" type="text/css">
     <![endif]-->
-    <script type="text/javascript" src="./lib/vendor/hipay/hipay-fullservice-sdk-js/hipay-fullservice-sdk-2.js"></script>
+    <script type="text/javascript" src="./lib/vendor/hipay/hipay-fullservice-sdk-js/hipay-fullservice-sdk-2.min.js"></script>
 
 </head>
 
